# Paris-Munich

./: .dockerignore  .env.example  .gitignore  .railwayignore  Dockerfile  README.md  pyproject.toml  railway.toml
config/: airports.yaml  backtest_config.yaml  data_sources.yaml  model_config.yaml  source_registry.yaml
docs/: backtest_results.md  data_sources.md  eddm_intraday_enhanced_feature_comparison.md  eddm_metar_tmax_backtest.md  eddm_spatial_metar_feature_comparison.md  eddm_weather_regime_feature_comparison.md  eddm_wind_advection_feature_comparison.md  first_analysis.md  hour_aware_intraday.md  intraday_backtest.md  intraday_ml_challenger.md  intraday_ml_dataset_audit.md  intraday_rolling_backtest.md  intraday_seasonal_weight_analysis.md  intraday_survival_prior_analysis.md  leakage_policy.md  lfpb_icon_d2_metar_tmax_model.md  lfpb_icon_d2_nwp_stress.md  lfpb_icon_ecmwf_diagnostic.md  lfpb_icon_ecmwf_model_comparison.md  lfpb_icon_enhanced_nwp_comparison.md  lfpb_intraday_enhanced_feature_comparison.md  lfpb_metar_tmax_model.md  lfpb_railway_ops.md  lfpb_spatial_metar_backtest.md  lfpb_truth_feasibility.md  lfpb_weather_regime_backtest.md  lfpb_wind_advection_backtest.md  model_design.md  model_disagreement_monitoring.md  monitoring_report.md  mostlyright_assessment.md  nwp_aware_holdout.md  nwp_backfill_analysis.md  nwp_data_limitations.md  nwp_residual_model.md  operational_ablation_report.md  operational_verification.md  outcome_analysis.md  phase_aware_intraday.md  (+11 more)
scripts/: 00_assess_mostlyright.py  01_select_station.py  02_download_observations.py  (+83 more)
(+267 files in other folders)
