[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-tmax-bot"
version = "0.1.0"
description = "Leakage-safe probabilistic Tmax forecasting MVP for airport-local days."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "requests>=2.31",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "typer>=0.12",
  "uvicorn>=0.29",
]

[project.optional-dependencies]
ml = ["lightgbm>=4.3"]
dev = ["pytest>=8.0"]
mostlyright = ["mostlyrightmd>=1.3.0", "mostlyrightmd-weather>=1.3.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
